GNOME Bugzilla – Bug 682174
Toggle buttons for list view and icon view briefly jump back to 'not pressed' until view has changed
Last modified: 2012-09-18 18:21:29 UTC
If you click on the list view or icon view button and release the mouse button, the button changes from 'pressed' to 'not pressed' for a second (until the view has changed?) before it changes to 'pressed' again. Nothing crucial, it just doesn't feel crunchy.
Created attachment 223574 [details] [review] Don't try to change the view buttons to the old view while loading The code tries to sync up the view type buttons while the new view is loading but the code tries to sync the buttons up with the last view instead of the pending view. I think it is just better to skip the operation while the view is loading.
Review of attachment 223574 [details] [review]: Makes sense.
Attachment 223574 [details] pushed as 9546a16 - Don't try to change the view buttons to the old view while loading
*** Bug 634903 has been marked as a duplicate of this bug. ***