Don't try to change the view buttons to the old view while loading

The code tries to sync up the view type buttons while the new
view is loading but the code tries to sync the buttons up with
the last view instead of the pending view. I think it is just
better to skip the operation while the view is loading.

https://bugzilla.gnome.org/show_bug.cgi?id=682174